Updated Functional Interface examples - Function